--- a/config-data/bootstrap.yml
+++ b/config-data/bootstrap.yml
@@ -8,3 +8,9 @@ spring:
         git:
           uri: https://github.com/Wolf96xz/bootCampConfigService.git
           search-paths: config-data
+  security:
+    user:
+      name: toni
+      password: 1234
+      roles:
+        - Manager
