--- a/config-data/gateway.yml
+++ b/config-data/gateway.yml
@@ -1,10 +1,10 @@
 server:
   port: 8070
+
 eureka:
   client:
     serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-spring:
+      defaultZone: http://localhost:8761/eureka/spring:
   cloud:
     gateway:
       discovery:
